[gd_scene load_steps=2 format=3 uid="uid://y3k0afdehs17"]

[ext_resource type="Script" uid="uid://beemj6pommvqb" path="res://Scripts/MENU_main.gd" id="1_peo84"]

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_peo84")

[node name="btn_play" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 830.0
offset_top = 491.0
offset_right = 983.0
offset_bottom = 598.0
theme_override_font_sizes/font_size = 72
text = "play
"

[node name="btn_options" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 754.0
offset_top = 622.0
offset_right = 1036.0
offset_bottom = 729.0
theme_override_font_sizes/font_size = 72
text = "settings"

[node name="btn_quit" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 828.0
offset_top = 756.0
offset_right = 981.0
offset_bottom = 863.0
theme_override_font_sizes/font_size = 72
text = "quit"

[node name="loadingText" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -308.0
offset_top = -99.0
offset_right = 309.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 72
text = "loading:"
fit_content = true

[connection signal="pressed" from="btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="btn_options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="btn_quit" to="." method="_on_btn_quit_pressed"]
